# dcman

./: .devcontainer.json  .gitignore  README.md  dcman.py  pyproject.toml  pytest.ini
e2e/: test_engine_lifecycle.py
src/dcman/: __init__.py  __main__.py  agent_instructions.py  auth.py  cli.py  config.py  container.py  devcontainer_cli.py  errors.py  features.py  lint.py  process.py  rendering.py  ssh.py  state.py
src/dcman/integrations/: __init__.py  codex.py  zed.py
tests/: conftest.py  helpers.py
tests/cli/: test_prune.py  test_rebuild_prompt.py  test_run_managed_shell.py  test_shell_env.py
tests/contract/: test_fedora_sandbox_contract.py
tests/e2e_engine/: test_engine_lifecycle.py
tests/unit/: test_agent_instructions.py  test_auth.py  test_codex_auth_seed.py  test_container_config.py  test_container_discovery.py  test_container_engine.py  test_container_size.py  test_devcontainer_cli.py  test_lint.py  test_state.py
