[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "dcman"
version = "0.1.0"
description = "Manage devcontainers with lifecycle, SSH bootstrap, and auth tokens."
requires-python = ">=3.11"
dependencies = [
  "click>=8.1.7,<9",
  "python-on-whales>=0.81.0",
]

[project.scripts]
dcman = "dcman.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dcman"]

[tool.uv]
package = true
