[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "dcman"
version = "0.1.0"
description = "Manage devcontainers with lifecycle, SSH bootstrap, and auth tokens."
requires-python = ">=3.11"
dependencies = [
  "click>=8.1.7,<9",
  "python-on-whales>=0.81.0",
  "rich>=13.9.4,<14",
]

[dependency-groups]
test = [
  "pytest>=7.4",
  "pytest-mock>=3.12",
  "pexpect>=4.9",
]

[project.scripts]
dcman = "dcman.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dcman"]

[tool.uv]
package = true
default-groups = ["test"]
